# cmd/internal/application/command/create_subscription/handler.go
@@ -2,6 +2,8 @@ package create_subscription
 
 import (
 	"context"
+	"fmt"
+	"net/url"
 
 	"github.com/jamm3e3333/strv-go-newsletter-vala-jakub/cmd/internal/application/dto"
 	"github.com/jamm3e3333/strv-go-newsletter-vala-jakub/cmd/internal/assets/template"
@@ -27,6 +29,10 @@ type SendSubConfirmationOperation interface {
 	Execute(ctx context.Context, p dto.SendSubConfirmation) error
 }
 
+type IsNewsletterSubExistOperation interface {
+	Execute(ctx context.Context, p dto.GetNewsletterSub) (bool, error)
+}
+
 type UnsubVerificationCodeGen = func(int32) (string, error)
 
 type CreateSubscription struct {
@@ -35,6 +41,8 @@ type CreateSubscription struct {
 	createNewsletterSubscription CreateNewsletterSubscriptionOperation
 	unsubVerificationCodeGen     UnsubVerificationCodeGen
 	sendSubConfirmation          SendSubConfirmationOperation
+	isNewsletterSubExist         IsNewsletterSubExistOperation
+	unsubURL                     string
 }
 
 func NewCreateSubscriptionHandler(
@@ -43,6 +51,8 @@ func NewCreateSubscriptionHandler(
 	createNewsletterSubscription CreateNewsletterSubscriptionOperation,
 	unsubVerificationCodeGen UnsubVerificationCodeGen,
 	sendSubConfirmation SendSubConfirmationOperation,
+	isNewsletterSubExist IsNewsletterSubExistOperation,
+	unsubURL string,
 ) *CreateSubscription {
 	return &CreateSubscription{
 		createSubscription:           createSubscription,
@@ -50,6 +60,8 @@ func NewCreateSubscriptionHandler(
 		createNewsletterSubscription: createNewsletterSubscription,
 		unsubVerificationCodeGen:     unsubVerificationCodeGen,
 		sendSubConfirmation:          sendSubConfirmation,
+		isNewsletterSubExist:         isNewsletterSubExist,
+		unsubURL:                     unsubURL,
 	}
 }
 
@@ -64,23 +76,49 @@ func (h *CreateSubscription) Handle(ctx context.Context, c Command) error {
 		return err
 	}
 
-	err = h.createNewsletterSubscription.Execute(ctx, dto.CreateNewsletterSubscription{
-		Email:        c.Email.String(),
+	isExist, err := h.isNewsletterSubExist.Execute(ctx, dto.GetNewsletterSub{
 		NewsletterID: newsletter.ID,
-		VerifCode:    verifCode,
+		Email:        c.Email.String(),
 	})
 	if err != nil {
 		return err
 	}
 
-	err = h.sendSubConfirmation.Execute(ctx, dto.SendSubConfirmation{
-		RecipientEmailAddr: c.Email,
-		Subject:            template.GetConfirmSubSubject(c.NewsletterPublicID),
-		Text:               template.GetConfirmSubTxt(newsletter.Name, verifCode),
-		HTML:               template.GetConfirmSubHTML(newsletter.Name, verifCode),
-	})
-	return h.createSubscription.Execute(ctx, dto.CreateSubscription{
-		Email:              c.Email.String(),
-		NewsletterPublicID: c.NewsletterPublicID,
-	})
+	if !isExist {
+		err = h.createNewsletterSubscription.Execute(ctx, dto.CreateNewsletterSubscription{
+			Email:        c.Email.String(),
+			NewsletterID: newsletter.ID,
+			VerifCode:    verifCode,
+		})
+		if err != nil {
+			return err
+		}
+
+		params := url.Values{}
+		params.Add("email", c.Email.Address)
+		params.Add("code", verifCode)
+		params.Add("newsletter_public_id", fmt.Sprintf("%d", c.NewsletterPublicID))
+		unsubLink := fmt.Sprintf("%s?%s", h.unsubURL, params.Encode())
+
+		fmt.Println("unsub_link", unsubLink)
+		err = h.sendSubConfirmation.Execute(ctx, dto.SendSubConfirmation{
+			RecipientEmailAddr: c.Email,
+			Subject:            template.GetConfirmSubSubject(c.NewsletterPublicID),
+			Text:               template.GetConfirmSubTxt(newsletter.Name, unsubLink),
+			HTML:               template.GetConfirmSubHTML(newsletter.Name, unsubLink),
+		})
+		if err != nil {
+			fmt.Println("error sending confirmation email:", err.Error())
+		}
+
+		err = h.createSubscription.Execute(ctx, dto.CreateSubscription{
+			Email:              c.Email.String(),
+			NewsletterPublicID: c.NewsletterPublicID,
+		})
+		if err != nil {
+			return err
+		}
+	}
+
+	return nil
 }
